apply good code practices, feat verify student email exists